--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Project</title>
 </head>
 <body>
-    
+    <button type="button" class="btn btn-primary">Primary</button>
 </body>
 </html>
