--- a/index.html
+++ b/index.html
@@ -4,12 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="node_modules/mdbootstrap/css/mdb.css">
+    <link rel="stylesheet" href ="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400i,600,600i,700,800i" rel="stylesheet">
     <title>Project</title>
 </head>
 <body>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <script src="node_modules/jquery/dist/js/jquery.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-body">
+                <!-- Title -->
+                <h1 class="card-title w-100">QUOTES FOR EVERY DAY</h1>
+                <!-- Text -->
+                <span><p id="quote" class="card-text w-100">Grove Street. Home. At least it was before I fucked everything up ...</p></span>
+                <span><p id="author" class="card-text w-100">Carl Johnson</p></span>
+                <!-- Button -->
+                <button class="btn btn-warning w-100"><a href="#">GENERATE NEW QUOTE</a></button>
+            </div>
+        </div>
+    </div>
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script>
+        $(document).ready(function(){
+
+            $("button").click(function(){
+                let colors = ['#16a085', '#27ae60', '#2c3e50', '#f39c12', '#e74c3c', '#9b59b6', '#FB6964', '#342224', "#472E32", "#BDBB99", "#77B1A9", "#73A857"];
+                let colorLen = colors.length - 1; 
+                let randomIndex = Math.round(Math.random() * colorLen);
+                let color = colors[randomIndex];
+                let color2 = colors[randomIndex];
+                $(".card").css("background", color);
+            
+                $.ajax({
+                    url: "https://gist.githubusercontent.com/camperbot/5a022b72e96c4c9585c32bf6a75f62d9/raw/e3c6895ce42069f0ee7e991229064f167fe8ccdc/quotes.json",
+                    dataType: "json",
+                    type: "get",
+                    cache: false, 
+                    success: function(data) {
+                        var arr = data.quotes;
+                        var arrLen = arr.length - 1;
+                        var index = Math.round(Math.random() * arrLen);
+                        var obj = arr[index]; //array with objects
+                        $("#author").text(obj.author);
+                        $("#quote").text(obj.quote);
+                    }
+                })
+            });
+        })
+        </script>
+    <script src="node_modules/mdbootstrap/js/popper.min.js"></script>
+    <script src="js/script.js"></script>
+
 </body>
 </html>
+
